WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
59274
[REGRESSION] Value 'none' breaks multiple background-image display
https://bugs.webkit.org/show_bug.cgi?id=59274
Summary
[REGRESSION] Value 'none' breaks multiple background-image display
nhackett1+webkit
Reported
2011-04-22 22:04:00 PDT
The test page has three background-image values set. When one of those values is 'none', and a background colour is specified, all subsequent images aren't displayed.
Attachments
Test case
(367 bytes, text/html)
2011-04-22 22:36 PDT
,
nhackett1+webkit
no flags
Details
Patch
(19.31 KB, text/plain)
2011-05-29 09:11 PDT
,
Mihnea Ovidenie
no flags
Details
Patch 2
(17.72 KB, patch)
2011-07-15 06:01 PDT
,
Mihnea Ovidenie
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ec2-cr-linux-02
(5.79 MB, application/zip)
2011-07-15 06:19 PDT
,
WebKit Review Bot
no flags
Details
Patch 3
(18.63 KB, patch)
2011-07-15 08:29 PDT
,
Mihnea Ovidenie
simon.fraser
: review+
simon.fraser
: commit-queue-
Details
Formatted Diff
Diff
Patch 4
(6.18 KB, patch)
2011-07-18 07:49 PDT
,
Mihnea Ovidenie
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
nhackett1+webkit
Comment 1
2011-04-22 22:36:54 PDT
Created
attachment 90843
[details]
Test case
Shane Stephens
Comment 2
2011-05-18 20:38:52 PDT
Works in Safari 5.0.4 and Chrome 11, Does not work on Chrome Canary or WebKit nightly on Mac OS 10.6
Mihnea Ovidenie
Comment 3
2011-05-29 02:11:01 PDT
I am working on a fix for it, likely caused by
http://trac.webkit.org/changeset/82969
(fix for 57773).
Mihnea Ovidenie
Comment 4
2011-05-29 09:11:47 PDT
Created
attachment 95286
[details]
Patch First version of the patch.
Mihnea Ovidenie
Comment 5
2011-07-15 06:01:06 PDT
Created
attachment 100961
[details]
Patch 2
WebKit Review Bot
Comment 6
2011-07-15 06:19:39 PDT
Comment on
attachment 100961
[details]
Patch 2
Attachment 100961
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/9099204
New failing tests: fast/backgrounds/background-fast-path-simple-color.html
WebKit Review Bot
Comment 7
2011-07-15 06:19:45 PDT
Created
attachment 100966
[details]
Archive of layout-test-results from ec2-cr-linux-02 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: ec2-cr-linux-02 Port: Chromium Platform: Linux-2.6.35-28-virtual-x86_64-with-Ubuntu-10.10-maverick
Mihnea Ovidenie
Comment 8
2011-07-15 08:29:42 PDT
Created
attachment 100988
[details]
Patch 3 Skip the test on chromium.
Simon Fraser (smfr)
Comment 9
2011-07-15 14:01:34 PDT
Comment on
attachment 100988
[details]
Patch 3 View in context:
https://bugs.webkit.org/attachment.cgi?id=100988&action=review
> LayoutTests/fast/backgrounds/background-fast-path-simple-color.html:20 > + Test for <a href="
https://bugs.webkit.org/show_bug.cgi?id=59274
">
https://bugs.webkit.org/show_bug.cgi?id=59274
</a> > + The test passes if you see a green rectangle below.
If this text were in an HTML comment, the pixel result could be cross-platform.
Mihnea Ovidenie
Comment 10
2011-07-18 07:49:59 PDT
Created
attachment 101157
[details]
Patch 4
WebKit Review Bot
Comment 11
2011-07-18 09:54:15 PDT
Comment on
attachment 101157
[details]
Patch 4 Clearing flags on attachment: 101157 Committed
r91190
: <
http://trac.webkit.org/changeset/91190
>
WebKit Review Bot
Comment 12
2011-07-18 09:54:32 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug