[REGRESSION] Value 'none' breaks multiple background-image display https://bugs.webkit.org/show_bug.cgi?id=59274

Patch by Mihnea Ovidenie <mihnea@adobe.com> on 2011-07-18
Reviewed by Simon Fraser.

When taking fast path for simple color background, we should draw
the background only if it is the last in the list of backgrounds.
Otherwise, it will obscure the previously drawn backgrounds.

Source/WebCore:

Test: fast/backgrounds/background-fast-path-simple-color.html

* rendering/RenderBoxModelObject.cpp:
(WebCore::RenderBoxModelObject::paintFillLayerExtended):

LayoutTests:

* fast/backgrounds/background-fast-path-simple-color-expected.png: Added.
* fast/backgrounds/background-fast-path-simple-color-expected.txt: Added.
* fast/backgrounds/background-fast-path-simple-color.html: Added.

git-svn-id: svn://svn.chromium.org/blink/trunk@91190 bbb929c8-8fbe-4397-9dbb-9b2b20218538